[tool.poetry]
name = "markdrip"
version = "0.1.2"
readme = "README.md"
repository = "https://github.com/Comamoca/MarkDrip"
description = "Simple MarkDown renderer"
authors = ["Comamoca <comamoca.dev@gmail.com>"]

[tool.poetry.scripts]
markdrip = "markdrip.main:main"

[tool.poetry.dependencies]
python = "^3.10"
mistletoe = "^0.8.2"
click = "^8.0.4"
Jinja2 = "^3.1.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
isort = "^5.10.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
